# pyrasaero

./: .gitignore  README.md  __main__.py  automation.py  cli.py  config.py  convert.py  example-base-parametric-model.CDX1  example.py  pyproject.toml  pyrasaero.py
pyrasaero/: automation.py  cli.py  convert.py
